# Chatbot-via-Telegram-API

./: Pipfile  Procfile  README.md  bot.py  clear_data.json  data_loader.py  main.py  pyproject.toml  questions.json  requirements.txt  token_data.py
dataset/: Creating Database.txt  clear_data.json  questions.json
src (database)/: clubs_database.py  data_loader.py  main.py
src (json)/: data_loader.py  main.py
