[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "my-bot"
version = "1.0.0"
description = "My Telegram bot"

[tool.poetry.dependencies]
python = "^3.9"
pyTelegramBotAPI = "^4.0"
requests = "^2.25"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[tool.poetry.scripts]
bot = "main:main"